--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,25 @@
+#userList {
+  background-color: cyan;
+  padding: 20px;
+}
+
+.task-container li {
+  padding: 10px;
+  width: 100px;
+}
+
+.task-container button {
+  width: 100px;
+}
+
 .strike {
   text-decoration: line-through;
+}
+
+.task-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
 }
