--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,7 @@ body {
   font-size: 4vh;
   width: 80%;
   margin: auto;
+  box-sizing: border-box;
 }
 
 .task-container li {
@@ -104,6 +105,7 @@ li {
   }
   #formDiv label {
     font-size: 5vh;
+    padding: 2vh;
   }
   #taskInput {
     font-size: 4vh;
@@ -125,5 +127,70 @@ li {
   .task-container button {
     width: 100%;
     font-size: 3vh;
+  }
+}
+
+@media (max-width: 270px) {
+  #heading {
+    font-size: 5vw;
+    margin: 0px;
+    padding: 10vw;
+  }
+  #formDiv {
+    margin: 0px auto 2vh;
+    padding: 0px;
+  }
+  #formDiv label {
+    font-size: 8vw;
+  }
+  #taskInput {
+    font-size: 7vw;
+    height: 5vh;
+  }
+  #formDiv button {
+    font-size: 5vw;
+    height: 4vh;
+  }
+  #userList {
+    padding: 0px;
+  }
+  .task-container li,
+  .task-container button {
+    font-size: 6vw;
+    height: 5vh;
+  }
+}
+
+@media (max-width: 200px) {
+  #taskInput {
+    font-size: 7vw;
+    height: 15vw;
+  }
+  #formDiv button {
+    font-size: 5vw;
+    height: 15vw;
+  }
+  .task-container li,
+  .task-container button {
+    font-size: 6vw;
+    height: 20vw;
+  }
+}
+
+@media (max-width: 100px) {
+  #taskInput {
+    font-size: 7vw;
+  }
+  #formDiv button {
+    font-size: 5vw;
+    padding: 0px;
+  }
+  .task-container li {
+    height: 10vw;
+  }
+  .task-container li,
+  .task-container button {
+    font-size: 6vw;
+    padding: 0px;
   }
 }
